Fix dep versions, add samples to Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,5 @@ install:
 script:
     - export SWIFTENV_ROOT="$HOME/.swiftenv"
     - export PATH="${SWIFTENV_ROOT}/bin:${SWIFTENV_ROOT}/shims:$PATH"
-    - make
+    - make clean all samples
+
