Improved makefiles for Swift 2.2

--- a/Samples/call-git/GNUmakefile
+++ b/Samples/call-git/GNUmakefile
@@ -1,12 +1,7 @@
 # GNUmakefile
 
-PACKAGE_DIR=../..
+NOZE_DIR=../..
 PACKAGE=$(notdir $(shell pwd))
-$(PACKAGE)_TYPE = tool
-
 $(PACKAGE)_SWIFT_MODULES = xsys core events streams fs child_process process
 
-$(PACKAGE)_SWIFT_FILES = main.swift
-
-include $(PACKAGE_DIR)/xcconfig/config.make
-include $(PACKAGE_DIR)/xcconfig/rules.make
+include $(NOZE_DIR)/xcconfig/rules.make
