--- a/Sources/express/GNUmakefile
+++ b/Sources/express/GNUmakefile
@@ -1,10 +1,7 @@
 # GNUmakefile
 
 PACKAGE_DIR=../..
-PACKAGE=$(notdir $(shell pwd))
-$(PACKAGE)_TYPE = library
 
-$(PACKAGE)_SWIFT_MODULES = xsys core events streams fs process http
+$(PACKAGE)_SWIFT_MODULES = xsys core events streams fs process http mustache
 
-include $(PACKAGE_DIR)/xcconfig/config.make
 include $(PACKAGE_DIR)/xcconfig/rules.make
