--- a/Sources/json/GNUmakefile
+++ b/Sources/json/GNUmakefile
@@ -4,7 +4,7 @@ PACKAGE_DIR=../..
 PACKAGE=$(notdir $(shell pwd))
 $(PACKAGE)_TYPE = library
 
-$(PACKAGE)_SWIFT_MODULES = xsys core
+$(PACKAGE)_SWIFT_MODULES = xsys core fs streams
 
 include $(PACKAGE_DIR)/xcconfig/config.make
 include $(PACKAGE_DIR)/xcconfig/rules.make
