--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
 script:
     - export SWIFTENV_ROOT="$HOME/.swiftenv"
     - export PATH="${SWIFTENV_ROOT}/bin:${SWIFTENV_ROOT}/shims:$PATH"
+    - git tag 0.2.1337
     - make all
     - make samples
-    - (cd /home/travis/build/NozeIO/Noze.io/Samples/miniirc/Packages/Noze.io; git tag)
 
