--- a/xcconfig/Base.xcconfig
+++ b/xcconfig/Base.xcconfig
@@ -39,3 +39,6 @@ COMBINE_HIDPI_IMAGES = YES
 LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/../Frameworks $(TOOLCHAIN_DIR)/usr/lib/swift/macosx
 
 OTHER_SWIFT_FLAGS = -DXcode
+
+// This is a little lame.
+SWIFT_VERSION = 2.3
