--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
     include:
         - os:   Linux
           dist: trusty
-          env:  "SWIFT_SNAPSHOT_NAME=https://swift.org/builds/swift-3.0-preview-1/ubuntu1404/swift-3.0-preview-1/swift-3.0-preview-1-ubuntu14.04.tar.gz"
+          env:  "SWIFT_SNAPSHOT_NAME=swift-3.0-preview-1"
           sudo: required
         - os:   Linux
           dist: trusty
