--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
         - os:   osx
           osx_image: xcode7.3
           env:  SWIFT_SNAPSHOT_NAME=DEVELOPMENT-SNAPSHOT-2016-06-06-a
+        - os:   osx
+          osx_image: xcode8
 
 before_install:
     - ./xcconfig/before-install.sh
