--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,15 @@ matrix:
     include:
         - os:   Linux
           dist: trusty
-          env:  "SWIFT_SNAPSHOT_NAME=swift-3.0-preview-1"
+          env:  SWIFT_SNAPSHOT_NAME=swift-3.0-preview-1
           sudo: required
         - os:   Linux
           dist: trusty
-          env:  "SWIFT_SNAPSHOT_NAME=2.2.1"
+          env:  SWIFT_SNAPSHOT_NAME=2.2.1
           sudo: required
+        - os:   osx
+          osx_image: xcode7.3
+          env:  SWIFT_SNAPSHOT_NAME=2.2.1
         - os:   osx
           osx_image: xcode7.3
           env:  SWIFT_SNAPSHOT_NAME=DEVELOPMENT-SNAPSHOT-2016-06-06-a
