--- a/Sources/json/GNUmakefile
+++ b/Sources/json/GNUmakefile
@@ -4,7 +4,6 @@ PACKAGE_DIR=../..
 PACKAGE=$(notdir $(shell pwd))
 $(PACKAGE)_TYPE = library
 
-$(PACKAGE)_SWIFT_MODULES = xsys core fs streams
+$(PACKAGE)_SWIFT_MODULES = xsys core fs streams Freddy
 
-include $(PACKAGE_DIR)/xcconfig/config.make
 include $(PACKAGE_DIR)/xcconfig/rules.make
