--- a/Sources/http/GNUmakefile
+++ b/Sources/http/GNUmakefile
@@ -5,7 +5,7 @@ PACKAGE=$(notdir $(shell pwd))
 $(PACKAGE)_TYPE = library
 
 $(PACKAGE)_SWIFT_MODULES = \
-	xsys core events streams net dns console base64 http_parser
+	xsys core events streams fs net dns console base64 http_parser
 
 include $(PACKAGE_DIR)/xcconfig/config.make
 include $(PACKAGE_DIR)/xcconfig/rules.make
