Fix more makefiles.

--- a/Sources/connect/GNUmakefile
+++ b/Sources/connect/GNUmakefile
@@ -2,12 +2,10 @@
 
 PACKAGE_DIR=../..
 PACKAGE=$(notdir $(shell pwd))
-$(PACKAGE)_TYPE = library
 
 $(PACKAGE)_SWIFT_MODULES = \
-  xsys core events streams fs \
-  process net http \
+  xsys core events streams fs console \
+  process net http http_parser \
   Freddy json
 
-include $(PACKAGE_DIR)/xcconfig/config.make
 include $(PACKAGE_DIR)/xcconfig/rules.make
