--- a/Sources/express/GNUmakefile
+++ b/Sources/express/GNUmakefile
@@ -1,7 +1,10 @@
 # GNUmakefile
 
 PACKAGE_DIR=../..
+PACKAGE=$(notdir $(shell pwd))
 
-$(PACKAGE)_SWIFT_MODULES = xsys core events streams fs process http mustache
+$(PACKAGE)_SWIFT_MODULES = \
+	xsys core events streams fs \
+	process http connect mustache
 
 include $(PACKAGE_DIR)/xcconfig/rules.make
