--- a/Sources/connect/GNUmakefile
+++ b/Sources/connect/GNUmakefile
@@ -6,6 +6,7 @@ PACKAGE=$(notdir $(shell pwd))
 $(PACKAGE)_SWIFT_MODULES = \
   xsys core events streams fs console \
   process net http http_parser \
-  Freddy json
+  Freddy json \
+	leftpad
 
 include $(PACKAGE_DIR)/xcconfig/rules.make
