--- a/Sources/express/GNUmakefile
+++ b/Sources/express/GNUmakefile
@@ -4,7 +4,9 @@ PACKAGE_DIR=../..
 PACKAGE=$(notdir $(shell pwd))
 
 $(PACKAGE)_SWIFT_MODULES = \
-	xsys core events streams fs \
-	process http connect mustache
+  xsys core events streams fs console \
+  process net http http_parser \
+	Freddy json \
+	connect mustache
 
 include $(PACKAGE_DIR)/xcconfig/rules.make
