Add a Redis client and a TodoMVC backend which uses that
Basic Redis client, quite likely full of bugs, but implemented
as a fully async streaming parser. No external libs needed.

Also added `todo-mvc-redis` which persists the todo objects in
Redis (and is rewritten to have an async storage API).

--- a/Noze.io.xcodeproj/xcshareddata/xcschemes/Working Tests.xcscheme
+++ b/Noze.io.xcodeproj/xcshareddata/xcschemes/Working Tests.xcscheme
@@ -145,6 +145,16 @@
                ReferencedContainer = "container:Noze.io.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E85EB6E31D43C2080012FE11"
+               BuildableName = "XSysTests.xctest"
+               BlueprintName = "XSysTests"
+               ReferencedContainer = "container:Noze.io.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
