--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,14 @@ matrix:
         - os:   Linux
           dist: trusty
           env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0-preview-4/ubuntu1404/swift-3.0-PREVIEW-4/swift-3.0-PREVIEW-4-ubuntu14.04.tar.gz"
-#          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0-preview-2/ubuntu1404/swift-3.0-PREVIEW-2/swift-3.0-PREVIEW-2-ubuntu14.04.tar.gz"
           sudo: required
-#        - os:   Linux
-#          dist: trusty
-#          env:  SWIFT_SNAPSHOT_NAME=2.2.1
-#          sudo: required
-#        - os:   osx
-#          osx_image: xcode7.3
-#          env:  SWIFT_SNAPSHOT_NAME=2.2.1
+        - os:   Linux
+          dist: trusty
+          env:  SWIFT_SNAPSHOT_NAME=2.2.1
+          sudo: required
+        - os:   osx
+          osx_image: xcode7.3
+          env:  SWIFT_SNAPSHOT_NAME=2.2.1
         - os:   osx
           osx_image: xcode8
 
