--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
         - os:   osx
           osx_image: xcode7.3
           env:  SWIFT_SNAPSHOT_NAME=2.2.1
-        - os:   osx
-          osx_image: xcode8
+#        - os:   osx
+#          osx_image: xcode8
 
 before_install:
     - ./xcconfig/before-install.sh
