--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,10 @@ notifications:
 
 matrix:
     include:
-#        - os:   Linux
-#          dist: trusty
-#          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0-preview-4/ubuntu1404/swift-3.0-PREVIEW-4/swift-3.0-PREVIEW-4-ubuntu14.04.tar.gz"
-#          sudo: required
-#        - os:   Linux
-#          dist: trusty
-#          env:  SWIFT_SNAPSHOT_NAME=2.2.1
-#          sudo: required
-#        - os:   osx
-#          osx_image: xcode7.3
-#          env:  SWIFT_SNAPSHOT_NAME=2.2.1
+        - os:   Linux
+          dist: trusty
+          env:  SWIFT_SNAPSHOT_NAME="://swift.org/builds/swift-3.0-GM-CANDIDATE/ubuntu1404/swift-3.0-GM-CANDIDATE/swift-3.0-GM-CANDIDATE-ubuntu14.04.tar.gz"
+          sudo: required
         - os:   osx
           osx_image: xcode8
 
