--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
           dist: trusty
           env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0.1-preview-2/ubuntu1404/swift-3.0.1-PREVIEW-2/swift-3.0.1-PREVIEW-2-ubuntu14.04.tar.gz"
           sudo: required
-#        - os:   osx
-#          osx_image: xcode8
+        - os:   osx
+          osx_image: xcode8
 
 before_install:
     - ./xcconfig/before-install.sh
