--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ notifications:
 
 matrix:
     include:
-        - os:   Linux
-          dist: trusty
-          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0.1-GM-CANDIDATE/ubuntu1404/swift-3.0.1-GM-CANDIDATE/swift-3.0.1-GM-CANDIDATE-ubuntu14.04.tar.gz"
-          sudo: required
+#        - os:   Linux
+#          dist: trusty
+#          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0.1-GM-CANDIDATE/ubuntu1404/swift-3.0.1-GM-CANDIDATE/swift-3.0.1-GM-CANDIDATE-ubuntu14.04.tar.gz"
+#          sudo: required
         - os:   osx
           osx_image: xcode8
 
@@ -24,5 +24,5 @@ script:
     - export PATH="${SWIFTENV_ROOT}/bin:${SWIFTENV_ROOT}/shims:$PATH"
     - git tag 0.3.1337
     - make all
-    - make samples
+#    - make samples
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then xcodebuild test -project Noze.io.xcodeproj -scheme "Working Tests" -destination 'platform=OS X,arch=x86_64' | xcpretty -f `xcpretty-travis-formatter` && exit ${PIPESTATUS[0]}; fi
