HTTPConnection does not leak for `sample-http-helloworld` anymore. BasicAuth test fails though.

--- a/Noze.io.xcodeproj/xcshareddata/xcschemes/samples-httpd-helloworld.xcscheme
+++ b/Noze.io.xcodeproj/xcshareddata/xcschemes/samples-httpd-helloworld.xcscheme
@@ -65,7 +65,7 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "AppKitRelease"
+      buildConfiguration = "AppKitDebug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
