--- a/xcconfig/Release.xcconfig
+++ b/xcconfig/Release.xcconfig
@@ -13,3 +13,7 @@ MTL_ENABLE_DEBUG_INFO              = NO
 GCC_PREPROCESSOR_DEFINITIONS       = RELEASE=1
 
 SWIFT_OPTIMIZATION_LEVEL = -Owholemodule
+
+// Required to build `fs` in Release mode with Xcode 8.1 8B62
+// Presumably this is breaking our KVC stuff for Mustache, hence disabled.
+// SWIFT_REFLECTION_METADATA_LEVEL = none
