--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
           dist: trusty
           env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0.1-release/ubuntu1404/swift-3.0.1-RELEASE/swift-3.0.1-RELEASE-ubuntu14.04.tar.gz"
           sudo: required
-        - os:   osx
-          osx_image: xcode8
+#        - os:   osx
+#          osx_image: xcode8
 
 before_install:
     - ./xcconfig/before-install.sh
@@ -25,4 +25,4 @@ script:
     - git tag 0.3.1337
     - make all
     - make samples
-
+    - make tests
