--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
     - export PATH="${SWIFTENV_ROOT}/bin:${SWIFTENV_ROOT}/shims:$PATH"
     - git tag 0.3.1337
     - make all
-    - make samples
+    # - make samples
     - make tests
