Hopefully fixes the strange `shell_session_update: command not found` error: https://github.com/travis-ci/travis-ci/issues/6307

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
           osx_image: xcode8
 
 before_install:
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rvm get head; fi
     - ./xcconfig/before-install.sh
 
 install:
