--- a/Sources/crypto/GNUmakefile
+++ b/Sources/crypto/GNUmakefile
@@ -5,6 +5,6 @@ PACKAGE=$(notdir $(shell pwd))
 $(PACKAGE)_TYPE = library
 
 $(PACKAGE)_SWIFT_MODULES = \
-	xsys core events streams
+	xsys core events streams CryptoSwift
 
 include $(PACKAGE_DIR)/xcconfig/rules.make
