--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,14 @@ matrix:
           dist: trusty
           env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.1.1-release/ubuntu1404/swift-3.1.1-RELEASE/swift-3.1.1-RELEASE-ubuntu14.04.tar.gz"
           sudo: required
+        - os:   Linux
+          dist: trusty
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.0-release/ubuntu1404/swift-4.0-RELEASE/swift-4.0-RELEASE-ubuntu14.04.tar.gz"
+          sudo: required
         - os:   osx
-          osx_image: xcode8.2
+          osx_image: xcode8.3
+        - os:   osx
+          osx_image: xcode9
 
 before_install:
     - ./.travis.d/before-install.sh
