--- a/.travis.yml
+++ b/.travis.yml
@@ -7,20 +7,22 @@ matrix:
     include:
         - os:   Linux
           dist: trusty
-          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.0.2-release/ubuntu1404/swift-3.0.2-RELEASE/swift-3.0.2-RELEASE-ubuntu14.04.tar.gz"
-          sudo: required
-        - os:   Linux
-          dist: trusty
           env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-3.1.1-release/ubuntu1404/swift-3.1.1-RELEASE/swift-3.1.1-RELEASE-ubuntu14.04.tar.gz"
           sudo: required
         - os:   Linux
           dist: trusty
-          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.0-release/ubuntu1404/swift-4.0-RELEASE/swift-4.0-RELEASE-ubuntu14.04.tar.gz"
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.0.3-release/ubuntu1404/swift-4.0.3-RELEASE/swift-4.0.3-RELEASE-ubuntu14.04.tar.gz"
+          sudo: required
+        - os:   Linux
+          dist: trusty
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.1-branch/ubuntu1404/swift-4.1-DEVELOPMENT-SNAPSHOT-2018-02-07-a/swift-4.1-DEVELOPMENT-SNAPSHOT-2018-02-07-a-ubuntu14.04.tar.gz"
           sudo: required
         - os:   osx
           osx_image: xcode8.3
         - os:   osx
-          osx_image: xcode9
+          osx_image: xcode9.2
+        - os:   osx
+          osx_image: xcode9.3beta
 
 before_install:
     - ./.travis.d/before-install.sh
