--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
           sudo: required
         - os:   Linux
           dist: trusty
-          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.1-release/ubuntu1404/swift-4.1-RELEASE/swift-4.1-RELEASE-ubuntu14.04.tar.gz"
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.1.1-release/ubuntu1404/swift-4.1.1-RELEASE/swift-4.1.1-RELEASE-ubuntu14.04.tar.gz"
           sudo: required
         - os:   osx
           osx_image: xcode8.3
@@ -23,6 +23,8 @@ matrix:
           osx_image: xcode9.2
         - os:   osx
           osx_image: xcode9.3
+        - os:   osx
+          osx_image: xcode9.4
 
 before_install:
     - ./.travis.d/before-install.sh
