--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,11 @@ matrix:
           sudo: required
         - os:   Linux
           dist: trusty
-          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.2-branch/ubuntu1404/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-24-a/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-07-24-a-ubuntu14.04.tar.gz"
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-4.2.3-release/ubuntu1404/swift-4.2.3-RELEASE/swift-4.2.3-RELEASE-ubuntu14.04.tar.gz"
+          sudo: required
+        - os:   Linux
+          dist: trusty
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.0-branch/ubuntu1404/swift-5.0-DEVELOPMENT-SNAPSHOT-2019-03-10-a/swift-5.0-DEVELOPMENT-SNAPSHOT-2019-03-10-a-ubuntu14.04.tar.gz"
           sudo: required
         - os:   osx
           osx_image: xcode8.3
@@ -29,6 +33,10 @@ matrix:
           osx_image: xcode9.3
         - os:   osx
           osx_image: xcode9.4
+        - os:   osx
+          osx_image: xcode10.1
+        - os:   osx
+          osx_image: xcode10.2
 
 before_install:
     - ./.travis.d/before-install.sh
