--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,11 @@ matrix:
           sudo: required
         - os:   Linux
           dist: trusty
-          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.0-branch/ubuntu1404/swift-5.0-DEVELOPMENT-SNAPSHOT-2019-03-10-a/swift-5.0-DEVELOPMENT-SNAPSHOT-2019-03-10-a-ubuntu14.04.tar.gz"
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.0.2-release/ubuntu1404/swift-5.0.2-RELEASE/swift-5.0.2-RELEASE-ubuntu14.04.tar.gz"
+          sudo: required
+        - os:   Linux
+          dist: trusty
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.1-branch/ubuntu1404/swift-5.1-DEVELOPMENT-SNAPSHOT-2019-07-25-a/swift-5.1-DEVELOPMENT-SNAPSHOT-2019-07-25-a-ubuntu14.04.tar.gz"
           sudo: required
         - os:   osx
           osx_image: xcode8.3
