--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,11 @@ matrix:
           dist: trusty
           env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.0.2-release/ubuntu1404/swift-5.0.2-RELEASE/swift-5.0.2-RELEASE-ubuntu14.04.tar.gz"
           sudo: required
-        - os:   Linux
-          dist: trusty
-          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.1-branch/ubuntu1404/swift-5.1-DEVELOPMENT-SNAPSHOT-2019-07-25-a/swift-5.1-DEVELOPMENT-SNAPSHOT-2019-07-25-a-ubuntu14.04.tar.gz"
-          sudo: required
+# this one crashes the compiler
+#        - os:   Linux
+#          dist: trusty
+#          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.1-branch/ubuntu1404/swift-5.1-DEVELOPMENT-SNAPSHOT-2019-07-25-a/swift-5.1-DEVELOPMENT-SNAPSHOT-2019-07-25-a-ubuntu14.04.tar.gz"
+#          sudo: required
         - os:   osx
           osx_image: xcode8.3
         - os:   osx
