--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ matrix:
         #  dist: trusty
         #  env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.1.3-release/ubuntu1404/swift-5.1.3-RELEASE/swift-5.1.3-RELEASE-ubuntu14.04.tar.gz"
         #  sudo: required
+        - os:   Linux
+          dist: xenial
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.2-release/ubuntu1604/swift-5.2-RELEASE/swift-5.2-RELEASE-ubuntu16.04.tar.gz"
+          sudo: required
         - os:   osx
           osx_image: xcode10.2
         - os:   osx
